--- a/src/main/java/com/mycompany/u1a4_xu_ricky/twoDimensionalArray.form
+++ b/src/main/java/com/mycompany/u1a4_xu_ricky/twoDimensionalArray.form
@@ -213,6 +213,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Student Average"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="calcAvgActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="courseAvg">
       <Properties>
