--- a/src/main/java/com/mycompany/u1a4_xu_ricky/twoDimensionalArray.form
+++ b/src/main/java/com/mycompany/u1a4_xu_ricky/twoDimensionalArray.form
@@ -221,6 +221,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Course Average"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="courseAvgActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane2">
       <AuxValues>
